--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^4.8.1",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.54.4",
     "swr": "^1.3.0"
   },
   "devDependencies": {
