--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "nextjs-project1",
+  "name": "nextjs-course",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "12.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.2.0"
+    "mongodb": "^3.6.4",
+    "next": "^12.2.5",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "sass": "^1.54.4",
+    "swr": "^0.4.2"
   }
 }
