--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.6",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^3.6.4",
+    "next": "^12.2.5",
+    "next-auth": "^3.29.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
